--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "localStorage": "^1.0.4",
     "mongoose": "^5.11.14",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
